Fix background position & overflow

--- a/src/app/Components/Story/story.css
+++ b/src/app/Components/Story/story.css
@@ -20,6 +20,7 @@
 	width: 100%;
 	height: 100%;
 	background-size: cover;
+	background-position: center center;
 }
 
 .overlay {
@@ -44,4 +45,5 @@
 	padding: 1em;
 	font-size: 1.125em;
 	line-height: 1.3;
+	overflow-x: hidden;
 }
